--- a/html/deportes/joanPradells.html
+++ b/html/deportes/joanPradells.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
     />
-    <title>SPORTIFY - Hockey</title>
+    <title>SPORTIFY - Joan Pradells</title>
   </head>
   <body>
     <!-- Navbar / Header -->
@@ -49,11 +49,11 @@
       </div>
       <div>
         <img src="../../ico/hockey.ico" alt="Hockey" />
-        <a>Hockey</a>
+        <a href="./hockey.html">Hockey</a>
       </div>
       <div>
-        <img src="../../ico/joan.ico" alt="Joan" />
-        <a href="./joanPradells.html">Joan Pradells</a>
+        <img src="../../ico/joan.ico" alt="Joan Pradells" />
+        <a>Joan Pradells</a>
       </div>
       <div>
         <img src="../../ico/natacion.ico" alt="Natación" />
@@ -69,51 +69,45 @@
       </div>
     </div>
 
-    <!-- Próximos Partidos -->
+    <!-- Próximas Competencias -->
     <div class="partidos-destacados">
-      <div class="title">Próximos Partidos</div>
+      <div class="title">Próximas Competencias</div>
 
-      <!-- Partido 1 -->
+      <!-- Competencia 1 -->
       <div class="section">
-        <div class="section-title">Lunes, 10 de marzo - Hockey sobre hielo</div>
+        <div class="section-title">Lunes, 10 de marzo - Powerlifting</div>
         <table class="match-table">
           <thead class="table-header">
             <tr>
-              <th>Equipo</th>
+              <th>Competidor</th>
               <th>Hora</th>
-              <th>1</th>
-              <th>X</th>
-              <th>2</th>
-              <th>Goles Totales</th>
-              <th>Doble Oportunidad</th>
+              <th>Culturismo</th>
+              <th>Powerlifting</th>
+              <th>Total Puntos</th>
+              <th>Especial</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Maple Leafs" />
-                  <span>Maple Leafs</span>
+                  <img src="../../ico/joan.ico" alt="Juan Pérez" />
+                  <span>Juan Pérez</span>
                 </div>
               </td>
               <td rowspan="2">18:00</td>
               <td rowspan="2" class="green-text">1.80</td>
-              <td rowspan="2" class="green-text">3.80</td>
               <td rowspan="2" class="green-text">2.10</td>
+              <td rowspan="2" class="green-text">3.50</td>
               <td rowspan="2">
-                <div>Over: <span class="green-text">5.5</span></div>
-                <div>Under: <span class="green-text">5.5</span></div>
-              </td>
-              <td rowspan="2">
-                <div>1X: <span class="green-text">1.25</span></div>
-                <div>X2: <span class="green-text">1.30</span></div>
+                <div>Bonus: <span class="green-text">+0.5</span></div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Canadiens" />
-                  <span>Canadiens</span>
+                  <img src="../../ico/joan.ico" alt="Carlos Ruiz" />
+                  <span>Carlos Ruiz</span>
                 </div>
               </td>
             </tr>
@@ -121,47 +115,41 @@
         </table>
       </div>
 
-      <!-- Partido 2 -->
+      <!-- Competencia 2 -->
       <div class="section">
-        <div class="section-title">Martes, 11 de marzo - Hockey sobre hielo</div>
+        <div class="section-title">Martes, 11 de marzo - Culturismo</div>
         <table class="match-table">
           <thead class="table-header">
             <tr>
-              <th>Equipo</th>
+              <th>Competidor</th>
               <th>Hora</th>
-              <th>1</th>
-              <th>X</th>
-              <th>2</th>
-              <th>Goles Totales</th>
-              <th>Doble Oportunidad</th>
+              <th>Culturismo</th>
+              <th>Powerlifting</th>
+              <th>Total Puntos</th>
+              <th>Especial</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Bruins" />
-                  <span>Bruins</span>
+                  <img src="../../ico/joan.ico" alt="Miguel Sánchez" />
+                  <span>Miguel Sánchez</span>
                 </div>
               </td>
               <td rowspan="2">20:00</td>
-              <td rowspan="2" class="green-text">1.85</td>
-              <td rowspan="2" class="green-text">3.90</td>
+              <td rowspan="2" class="green-text">1.90</td>
               <td rowspan="2" class="green-text">2.00</td>
+              <td rowspan="2" class="green-text">3.80</td>
               <td rowspan="2">
-                <div>Over: <span class="green-text">6.0</span></div>
-                <div>Under: <span class="green-text">6.0</span></div>
-              </td>
-              <td rowspan="2">
-                <div>1X: <span class="green-text">1.28</span></div>
-                <div>X2: <span class="green-text">1.33</span></div>
+                <div>Bonus: <span class="green-text">+0.7</span></div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Blackhawks" />
-                  <span>Blackhawks</span>
+                  <img src="../../ico/joan.ico" alt="Andrés López" />
+                  <span>Andrés López</span>
                 </div>
               </td>
             </tr>
@@ -169,94 +157,83 @@
         </table>
       </div>
 
+      <!-- Competencia 3 -->
       <div class="section">
-        <div class="section-title">Miércoles, 12 de marzo - Hockey sobre hielo</div>
+        <div class="section-title">Miércoles, 12 de marzo - Powerlifting</div>
         <table class="match-table">
           <thead class="table-header">
             <tr>
-              <th>Equipo</th>
+              <th>Competidor</th>
               <th>Hora</th>
-              <th>1</th>
-              <th>X</th>
-              <th>2</th>
-              <th>Goles Totales</th>
-              <th>Doble Oportunidad</th>
+              <th>Culturismo</th>
+              <th>Powerlifting</th>
+              <th>Total Puntos</th>
+              <th>Especial</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Oilers" />
-                  <span>Oilers</span>
+                  <img src="../../ico/joan.ico" alt="Raúl Gómez" />
+                  <span>Raúl Gómez</span>
                 </div>
               </td>
               <td rowspan="2">16:30</td>
-              <td rowspan="2" class="green-text">1.90</td>
-              <td rowspan="2" class="green-text">4.00</td>
-              <td rowspan="2" class="green-text">2.05</td>
-              <td rowspan="2">
-                <div>Over: <span class="green-text">5.0</span></div>
-                <div>Under: <span class="green-text">5.0</span></div>
-              </td>
-              <td rowspan="2">
-                <div>1X: <span class="green-text">1.30</span></div>
-                <div>X2: <span class="green-text">1.35</span></div>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Flyers" />
-                  <span>Flyers</span>
-                </div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-
-      <!-- Partido 4 -->
-      <div class="section">
-        <div class="section-title">Jueves, 13 de marzo - Hockey sobre hielo</div>
-        <table class="match-table">
-          <thead class="table-header">
-            <tr>
-              <th>Equipo</th>
-              <th>Hora</th>
-              <th>1</th>
-              <th>X</th>
-              <th>2</th>
-              <th>Goles Totales</th>
-              <th>Doble Oportunidad</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Lightning" />
-                  <span>Lightning</span>
-                </div>
-              </td>
-              <td rowspan="2">19:00</td>
               <td rowspan="2" class="green-text">1.85</td>
-              <td rowspan="2" class="green-text">3.70</td>
               <td rowspan="2" class="green-text">2.05</td>
+              <td rowspan="2" class="green-text">3.70</td>
               <td rowspan="2">
-                <div>Over: <span class="green-text">5.5</span></div>
-                <div>Under: <span class="green-text">5.5</span></div>
-              </td>
-              <td rowspan="2">
-                <div>1X: <span class="green-text">1.27</span></div>
-                <div>X2: <span class="green-text">1.32</span></div>
+                <div>Bonus: <span class="green-text">+0.6</span></div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Bruins" />
-                  <span>Bruins</span>
+                  <img src="../../ico/joan.ico" alt="Fernando Díaz" />
+                  <span>Fernando Díaz</span>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      
+      <!-- Competencia 4 -->
+      <div class="section">
+        <div class="section-title">Jueves, 13 de marzo - Powerlifting</div>
+        <table class="match-table">
+          <thead class="table-header">
+            <tr>
+              <th>Competidor</th>
+              <th>Hora</th>
+              <th>Culturismo</th>
+              <th>Powerlifting</th>
+              <th>Total Puntos</th>
+              <th>Especial</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <div class="team-info">
+                  <img src="../../ico/joan.ico" alt="Roberto Díaz" />
+                  <span>Roberto Díaz</span>
+                </div>
+              </td>
+              <td rowspan="2">14:00</td>
+              <td rowspan="2" class="green-text">1.88</td>
+              <td rowspan="2" class="green-text">2.10</td>
+              <td rowspan="2" class="green-text">3.90</td>
+              <td rowspan="2">
+                <div>Bonus: <span class="green-text">+0.8</span></div>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="team-info">
+                  <img src="../../ico/joan.ico" alt="Esteban López" />
+                  <span>Esteban López</span>
                 </div>
               </td>
             </tr>
@@ -264,47 +241,41 @@
         </table>
       </div>
 
-      <!-- Partido 5 -->
+      <!-- Competencia 5 -->
       <div class="section">
-        <div class="section-title">Viernes, 14 de marzo - Hockey sobre hielo</div>
+        <div class="section-title">Viernes, 14 de marzo - Culturismo</div>
         <table class="match-table">
           <thead class="table-header">
             <tr>
-              <th>Equipo</th>
+              <th>Competidor</th>
               <th>Hora</th>
-              <th>1</th>
-              <th>X</th>
-              <th>2</th>
-              <th>Goles Totales</th>
-              <th>Doble Oportunidad</th>
+              <th>Culturismo</th>
+              <th>Powerlifting</th>
+              <th>Total Puntos</th>
+              <th>Especial</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Red Wings" />
-                  <span>Red Wings</span>
+                  <img src="../../ico/joan.ico" alt="Alejandro Torres" />
+                  <span>Alejandro Torres</span>
                 </div>
               </td>
-              <td rowspan="2">21:00</td>
-              <td rowspan="2" class="green-text">1.80</td>
-              <td rowspan="2" class="green-text">3.85</td>
+              <td rowspan="2">15:30</td>
+              <td rowspan="2" class="green-text">1.92</td>
               <td rowspan="2" class="green-text">2.00</td>
+              <td rowspan="2" class="green-text">4.00</td>
               <td rowspan="2">
-                <div>Over: <span class="green-text">6.0</span></div>
-                <div>Under: <span class="green-text">6.0</span></div>
-              </td>
-              <td rowspan="2">
-                <div>1X: <span class="green-text">1.30</span></div>
-                <div>X2: <span class="green-text">1.35</span></div>
+                <div>Bonus: <span class="green-text">+0.9</span></div>
               </td>
             </tr>
             <tr>
               <td>
                 <div class="team-info">
-                  <img src="../../ico/hockey.ico" alt="Predators" />
-                  <span>Predators</span>
+                  <img src="../../ico/joan.ico" alt="Sergio Martínez" />
+                  <span>Sergio Martínez</span>
                 </div>
               </td>
             </tr>
